# gello_software

./: .gitignore
docker/: Dockerfile  docker-compose.yml
experiments/: run_env.py
gello/agents/: gello_agent.py
gello/dynamixel/: driver.py
gello_ros/src/gello_msgs/: CMakeLists.txt  package.xml
gello_ros/src/gello_msgs/msg/: GelloState.msg
gello_ros/src/gello_tm/: package.xml  setup.cfg  setup.py
gello_ros/src/gello_tm/gello_tm/: gello_node.py  tm_command.py  tm_node.py
